# Mayday

./: .gitignore  Cargo.toml  README.md
example_resources/: chatgpt.toml  ircnet.toml  loopback.toml
src/: app.rs  args.rs  events.rs  lib.rs  macros.rs  main.rs  states.rs
src/business_logic/: discussion.rs  message.rs  mod.rs
src/drivers/: chatgpt.rs  driver.rs  irc.rs  loopback.rs  mod.rs
src/files/: config.rs  database.rs  mod.rs  utils.rs
src/models/: config.rs  config_file.rs  driver.rs  driver_config.rs  message.rs  mod.rs  service.rs  stateful_messaging_services.rs  stateful_scrollbar.rs
src/ui/: app_state.rs  discussion_layout.rs  main_layout.rs  messaging_services_layout.rs  mod.rs  ui.rs
src/worker/: worker.rs
