[package]
name = "mayday"
version = "0.1.0"
edition = "2024"
default-run = "tui"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["macros", "crossterm", "all-widgets"]}
reqwest = { version = "0.12.19", default-features = false, features = ["cookies", "rustls-tls-native-roots", "multipart", "gzip", "brotli", "deflate", "stream"] }

tui-textarea = { version = "0.7.0", features = ["ratatui"] }

native_db = "0.8.1"
native_model = "0.4.20"

serde = { version = "1.0", features = ["derive"]}
toml = "0.8"
uuid = { version = "1.17", features = ["serde", "v4"]}

crokey = "1.1.2"
directories = "6.0.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
textwrap = "0.16.2"
rayon = "1.10.0"
regex = { version = "1.11.1", features = [] }
once_cell = { version = "1.21.3", default-features = false, features = ["std"]}
parking_lot = { version = "0.12.4", features = ["serde", "send_guard"]}