[package]
name = "mayday"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["macros", "crossterm", "all-widgets"]}
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls-native-roots", "multipart", "gzip", "brotli", "deflate", "json", "stream"] }

tui-textarea = { version = "0.7.0", features = ["ratatui"] }

ormlite = { version = "0.24.1", features = ["chrono", "sqlite"]}

tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"]}
futures = "0.3"
parking_lot = { version = "0.12.4", features = ["send_guard"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["serde", "v4"]}
clap = { version = "4.5", features = ["derive", "unicode"]}

crokey = "1.1.2"
directories = "6.0.0"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
textwrap = "0.16.2"
rayon = "1.11.0"
regex = { version = "1.11.2", features = [] }
once_cell = { version = "1.21.3", default-features = false, features = ["std"]}
async-trait = "0.1.89"

log = "0.4.28"
env_logger = { version = "0.11.8", features = ["color"]}

# Messaging services dependencies
irc = { version = "1.1.0", default-features = false, features = ["channel-lists", "ctcp", "rustls-native-certs", "serde"]}